refactoring the app

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cool Store</title>
+    <link rel="shortcut icon" type="image/jpg" href="/kiss.png">
   </head>
   <body>
     <div id="root"></div>
